--- a/src/components/Author/Author.module.css
+++ b/src/components/Author/Author.module.css
@@ -1,5 +1,7 @@
-.Container {
+.Author {
   margin-top: 1.6rem;
+  display: flex;
+  align-items: center;
 }
 
 .Image {
@@ -8,4 +10,22 @@
   display: block;
   border-radius: 50%;
   border: solid 1px #fff;
+  margin-right: 1.6rem;
+}
+
+.Text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #8bacd9;
+}
+
+.AuthorName {
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.AuthorName:hover {
+  color: #00fff8;
 }
